tests/error/error07.correct
variable 'this' not found
11
